# SimpleHttpServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Configs/: hosts.config
DefaultBackEnd/: CMakeLists.txt  main.cpp
DefaultFrontEnd/: index.html  main.css
NewProcess/: NewProcess.cpp  NewProcess.h
NewProcess/WriteResponse/: WriteResponse.cpp  WriteResponse.h
Options/: Option.cpp  Option.h
StaticFiles/Check/: Check.cpp  Check.h
StaticFiles/UploadFile/: UploadFile.cpp  UploadFile.h
